--- a/EmployeeDirectory.DAL/EmployeeDirectory.DAL.csproj
+++ b/EmployeeDirectory.DAL/EmployeeDirectory.DAL.csproj
@@ -9,6 +9,7 @@
   <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
